--- a/animalcages.csproj
+++ b/animalcages.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="modicon.png" />
     <Content Include="modinfo.json" />
   </ItemGroup>
   <ItemGroup>
