--- a/resources/assets/animalcages/config/defaultconfig.json
+++ b/resources/assets/animalcages/config/defaultconfig.json
@@ -61,7 +61,7 @@
             "scale": 1.0
         },
         {
-            "name": "raccoon-pub",
+            "name": "raccoon-pup",
             "scale": 1.0
         },
         {
